--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 <p>This repository contains example code from my time working toward my Ph.D. from Columbia University in Chemical Physics.</p>
 
 <h2>
-<a name="janus_mdc" class="anchor" href="#janus_mdc"><span class="octicon octicon-link"></span></a><a href="Janus_MD.c">Janus_MD.c</a>
+<a name="janus_mdc" class="anchor" href="#janus_mdc"><span class="octicon octicon-link"></span></a><a href="https://github.com/wlmiller/GradSchool/blob/master/Janus_MD.c">Janus_MD.c</a>
 </h2>
 
-<p>This code runs a simulation of a generalization of so-called "Janus" particles.  Janus particles are particles which are one-half attractive and one-half repulsive; our generalization allows that ratio to vary from one-half.  For more information, see [1].</p>
+<p>This code runs a simulation of a generalization of so-called "Janus" particles.  Janus particles are particles which are one-half attractive and one-half repulsive; our generalization allows that ratio to vary from one-half.  For more information, see <a href="#ref1">[1]</a>.</p>
 
 <h3>
 <a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h3>
@@ -55,10 +55,10 @@
 <li>
 <code>range</code> = The range of the attractive part of the interaction potential as compared to the repulsive part; <code>range = 1</code> is a standard Lennard-Jones potential.</li>
 </ul><h2>
-<a name="aspherical_coexistencec" class="anchor" href="#aspherical_coexistencec"><span class="octicon octicon-link"></span></a><a href="aspherical_coexistence.c">aspherical_coexistence.c</a>
+<a name="aspherical_coexistencec" class="anchor" href="#aspherical_coexistencec"><span class="octicon octicon-link"></span></a><a href="https://github.com/wlmiller/GradSchool/blob/master/aspherical_coexistence.c">aspherical_coexistence.c</a>
 </h2>
 
-<p>Performs a Monte Carlo of a box containing one-half fcc crystalline and one-half liquid-phase hard aspherical particles. Particles are constructed as described in [2], by placing some number of balls in an overlapping configuration.  The number of balls and degree of overlap are adjustable, allowing for control of the degree of asphericity.  See [3] for more information.</p>
+<p>Performs a Monte Carlo of a box containing one-half fcc crystalline and one-half liquid-phase hard aspherical particles. Particles are constructed as described in <a href="#ref2">[2]</a>, by placing some number of balls in an overlapping configuration.  The number of balls and degree of overlap are adjustable, allowing for control of the degree of asphericity.  See <a href="#ref3">[3]</a> for more information.</p>
 
 <h3>
 <a name="usage-1" class="anchor" href="#usage-1"><span class="octicon octicon-link"></span></a>Usage:</h3>
@@ -79,15 +79,15 @@
 <a name="references" class="anchor" href="#references"><span class="octicon octicon-link"></span></a>References</h2>
 
 <ol>
-<li>W. L. Miller and A. Cacciuto. <a href="http://arxiv.org/pdf/0905.4236v3.pdf">Hierarchical self-assembly of asymmetric amphiphatic spherical colloidal particles</a>. Phys. Rev. E 80, 021404 (2009).</li>
-<li>W. L. Miller, B. Bozorgui, and A. Cacciuto. <a href="http://arxiv.org/pdf/1002.0316v2.pdf">Crystallization of hard aspherical particles</a>. J. Chem. Phys. 132, 134901 (2010).</li>
-<li>W. L. Miller and A. Cacciuto. <a href="http://arxiv.org/pdf/1010.1245v2.pdf">On the phase behavior of hard aspherical particles</a>. J. Chem. Phys. 133, 234903 (2010).</li>
+<li id="ref1">W. L. Miller and A. Cacciuto. <a href="http://arxiv.org/pdf/0905.4236v3.pdf">Hierarchical self-assembly of asymmetric amphiphatic spherical colloidal particles</a>. Phys. Rev. E 80, 021404 (2009).</li>
+<li id="ref2">W. L. Miller, B. Bozorgui, and A. Cacciuto. <a href="http://arxiv.org/pdf/1002.0316v2.pdf">Crystallization of hard aspherical particles</a>. J. Chem. Phys. 132, 134901 (2010).</li>
+<li id="ref3">W. L. Miller and A. Cacciuto. <a href="http://arxiv.org/pdf/1010.1245v2.pdf">On the phase behavior of hard aspherical particles</a>. J. Chem. Phys. 133, 234903 (2010).</li>
 </ol>
       </section>
-      <footer>
+      <!--<footer>
         <p>This project is maintained by <a href="https://github.com/wlmiller">wlmiller</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
+      </footer>-->
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
